Made updates on layout based on feedback document - remove border from token buttons - add hover to gas icon - fixed convereration rate and made it reversible onclick - change spacing, hover background, remove bold on hoveer, and contract title for contracts - created a fixed height for token list with scrollbar - added a thin scrollbar to css - change spacing in navbar remaining TODOs: - add balances to tokens - shorten list based on balances ???

--- a/src/app/_styles/globals.css
+++ b/src/app/_styles/globals.css
@@ -10,6 +10,29 @@
   --background-end-rgb: 255, 255, 255;
 }
 
+/* width */
+::-webkit-scrollbar {
+    width: 8px;
+}
+ 
+/* Track */
+::-webkit-scrollbar-track {
+    background: #f5f5f5;
+    border-radius: 5px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #3165D480;
+    border-radius: 5px;
+}
+ 
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #3165D4;
+    
+}
+
 @layer base {
   body {
     font-family: var(--font-geo);
